# testla

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: publish.yml  tests.yml
docs/: HANDOFF.md
docs/adr/: 0002-repository-as-source-of-truth-for-test-cases.md  0003-pytest-marker-for-test-case-linking.md  0004-use-testla-folder-and-pyprojecttoml-for-configuration.md  0005-configurable-test-case-section-formats.md
docs/design/: tui.md
src/testla/: __init__.py  cli.py
