[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testla"
version = "0.1.0"
description = "FOSS Test Case Management"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "m1yag1", email = "8730430+m1yag1@users.noreply.github.com"},
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "type" },
    "pre-commit>=3.5.0",
    "tox>=4.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]
type = [
    "mypy>=1.8.0",
    "types-click",
]

[project.scripts]
testla = "testla.cli:main"


[tool.hatch.build.targets.wheel]
packages = ["src/testla"]

[tool.coverage.run]
source = ["src/testla"]
branch = true
parallel = true

[tool.coverage.paths]
source = [
    "src/testla",
    "*/site-packages/testla",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
line-length = 90
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EXE", # flake8-executable
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G", # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PD", # pandas-vet
    "PGH", # pygrep-hooks
    "PL", # pylint
    "TRY", # tryceratops
    "RUF", # ruff-specific
]
ignore = [
    "PLR0913", # Too many arguments
    "E501", # Line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["testla"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
